syntax = "proto3";

package blimp.node.v0;

import "blimp/errors/v0/errors.proto";

option go_package = "github.com/kelda-inc/blimp/pkg/proto/node";

service BootWaiter {
  rpc CheckReady(CheckReadyRequest) returns (stream CheckReadyResponse) {}
}

message CheckReadyRequest {
    string namespace = 1;
    WaitSpec wait_spec = 2;
}

message WaitSpec {
	map<string, ServiceCondition> depends_on = 1;
	repeated string bind_volumes = 2;
}

message ServiceCondition {
    string Condition = 1;
}

message CheckReadyResponse {
    blimp.errors.v0.Error error = 1;

    bool ready = 2;

    // An optional message providing more information on why the container
    // needs to wait.
    string reason = 3;
}
